--- a/movie_app/pubspec.yaml
+++ b/movie_app/pubspec.yaml
@@ -76,12 +76,14 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: Product Sans
+      fonts:
+        - asset: fonts/Product_Sans_Bold_Italic.ttf
+        - asset: fonts/Product_Sans_Bold.ttf
+        - asset: fonts/Product_Sans_Italic.ttf
+        - asset: fonts/Product_Sans_Regular.ttf
+                        
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
